0029961: Foundation Classes - NCollection_Shared constructor passes arguments by copy

New NCollection_Shared constructors taking arguments by reference have been added.